Fix nav and add a new scrollbar option

--- a/xSinglePage.css
+++ b/xSinglePage.css
@@ -27,6 +27,10 @@ xxxxxxx      xxxxxxxPPPPPPPPPP          aaaaaaaaaa  aaaa   gggggggg::::::g     e
 © xPager - xGallery - Manuel Kleinert - www.xpager.ch - info(at)xpager.ch - v 1.2.0 - 19.02.2015
 #####################################################################################################################*/
 
+.overflow{
+    overflow: hidden!important;
+}
+
 #loader{
     position:fixed;
     top: 0px;
@@ -91,6 +95,12 @@ xxxxxxx      xxxxxxxPPPPPPPPPP          aaaaaaaaaa  aaaa   gggggggg::::::g     e
 .xSinglePage .navigation ul li ul{
     position: absolute;
     background-color:#eee;
+    -webkit-border-bottom-right-radius: 10px;
+    -webkit-border-bottom-left-radius: 10px;
+    -moz-border-radius-bottomright: 10px;
+    -moz-border-radius-bottomleft: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
     display: none;
 }
 
